Java 8 compatible.